--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "noty": "^3.2.0-beta-deprecated",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.15.3",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "3.4.1"
